# CNN-CPP

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.txt  README.md  build.sh  clean.sh  datasets.json  docker-compose.yml  download.sh  help.txt  install.sh  run_tests.sh  tasks.py  tools.py
include/: ImageAugmentor.hpp  ImageContainer.hpp  ImageLoader.hpp  convolution_layer.hpp
include/CNN/: ActivationLayer.hpp  AveragePoolingLayer.hpp  BatchManager.hpp  BatchNormalizationLayer.hpp  ConvolutionLayer.hpp  ELRAL.hpp  ELRALES.hpp  FlattenLayer.hpp  FullyConnectedLayer.hpp  GradientClipping.hpp  Layer.hpp  LearningDecay.hpp  LossFunction.hpp  MaxPoolingLayer.hpp  NNLogger.hpp  NeuralNetwork.hpp  Optimizer.hpp  TensorOperations.hpp
include/Common/: Common.hpp
include/Image/: ImageAugmentor.hpp  ImageContainer.hpp  ImageLoader.hpp
include/ThreadPool/: ThreadPool.hpp  ThreadPool.inl
src/: ImageAugmentor.cpp  ImageLoader.cpp  convolution_layer.cpp  main.cpp
src/CNN/: ActivationLayer.cpp  AveragePoolingLayer.cpp  BatchManager.cpp  BatchNormalizationLayer.cpp  ConvolutionLayer.cpp  ELRAL.cpp  ELRALES.cpp  FlattenLayer.cpp  FullyConnectedLayer.cpp  GradientClipping.cpp  LearningDecay.cpp  LossFunction.cpp  MaxPoolingLayer.cpp  NNLogger.cpp  NeuralNetwork.cpp  Optimizer.cpp  TensorOperations.cpp
src/Common/: Common.cpp
src/Image/: ImageAugmentor.cpp  ImageContainer.cpp  ImageLoader.cpp
src/ThreadPool/: ThreadPool.cpp
src/WModels/: cnn_cd_e50.hpp  cnn_ld_bn_cd_e25.hpp  cnn_sanity_2_colors.hpp
tests/: test_activation_layer.cpp  test_convolution_layer.cpp  test_fullyconnected_layer.cpp  test_optimizer.cpp
tfmodels/: cnn_cd_e30.py  cnn_cd_ld_e25.py  cnn_cd_nb_e25.py  cnn_cifar10_e10.py  cnn_minst_e10.py  cnn_mnist_e3.py
wmodels/: cnn_cd_e30.hpp  cnn_cd_e50.hpp  cnn_cd_elrales_e25.hpp  cnn_cd_ld_bn_e25.hpp  cnn_cd_ld_e25.hpp  cnn_cd_nb_e25.hpp  cnn_cifar10_bn_e5.hpp  cnn_cifar10_e10.hpp  cnn_cifar10_e5.hpp  cnn_elrales_cd_e25.hpp  cnn_example.hpp  cnn_minst_e10.hpp  cnn_mnist_e3.hpp  cnn_sanity_2_colors.hpp  cnn_sanity_2_shapes.hpp  cnn_sanity_5_colors.hpp  cnn_sanity_5_shapes.hpp  example.hpp
wreadme/cnn_cpp/csv/: cnn_cd_e30.csv  cnn_cd_elrales_e25.csv  cnn_cd_elrales_e25_es.csv  cnn_cd_ld_e25.csv  cnn_cd_nb_e25.csv  cnn_cifar10_e10.csv  cnn_mnist_e3.csv
wreadme/cnn_cpp/txt/: cnn_cd_e30_predictions.txt  cnn_cd_elrales_e25_es_predictions.txt  cnn_cd_elrales_e25_predictions.txt  cnn_cd_ld_e25_predictions.txt  cnn_cd_nb_e25_predictions.txt  cnn_cifar10_e10_predictions.txt  cnn_cifar10_e10_progress.txt  cnn_mnist_e3_predictions.txt
wreadme/tf/txt/: cnn_cd_e30_predictions.txt  cnn_cd_ld_e25_predictions.txt  cnn_cd_nb_e25_predictions.txt  cnn_cifar10_e10_predictions.txt  cnn_mnist_e3_predictions.txt
